# melancholia

./: README.md  design.md  melancholia.cabal
doc/: design.md  dyn.md
src/: Melancholia.hs
src/Melancholia/: Partition.hs  Task.hs
